# projeto_crud_completo

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  router.py  schema.py
frontend/: Dockerfile
frontend/.streamlit/: config.toml
