[tool.poetry]
name = "projeto-crud-completo"
version = "0.1.0"
description = ""
authors = ["Ricardo Marques <dataricardom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
pydantic = {extras = ["email"], version = "^2.10.6"}
fastapi = {extras = ["standard"], version = "^0.115.8"}
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
streamlit = "^1.42.0"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
